分支特性：增加领地检查支持 增加help指令 增加coreprotect风格化支持 增加世界操作确认

--- a/prism-paper/src/main/resources/locale/messages-en_PT.properties
+++ b/prism-paper/src/main/resources/locale/messages-en_PT.properties
@@ -1,3 +1,39 @@
+prism.activity-row-grouped-no-descriptor-no-quantity=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense>
+prism.activity-row-grouped-no-descriptor=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>(x<activity_count>)
+prism.activity-row-grouped-no-quantity=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor>
+prism.activity-row-grouped=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>(x<activity_count>)
+prism.activity-row-ungrouped-no-descriptor=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense>
+prism.activity-row-ungrouped=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor>
 prism.alert-block-break=<data_color><data_player> plundered <data_count> <data_block> in <data_light_level>% light
 prism.alert-block-break-night-vision=<data_color><data_player> plundered <data_count> <data_block> in <data_light_level>% light (using night vision)
 prism.no-results=<\#fc2150>No results me hearties!
+claims.not_your_claim=<prefix><#fc2150>Ye cannot use inspect in someone else's claim
+claims.wilderness_no_permission=<prefix><#fc2150>Ye don't have permission to inspect in wilderness
+prism.confirmation.timeout=<prefix><#fcff69>⚠ <grey>Confirmation be timed out. Run the command again, ye scallywag!
+prism.confirmation.confirmed=<prefix><#9dfc56>✔ <grey>Action confirmed, executin'...
+prism.confirmation.cancelled=<prefix><grey>✔ Action be cancelled.
+prism.confirmation.no-pending=<prefix><#fc2150>✖ <grey>No pending confirmation, matey.
+prism.confirmation.invalid-id=<prefix><#fc2150>✖ <grey>Invalid confirmation ID, ye landlubber!
+prism.confirmation.no-cancel-pending=<prefix><#fc2150>✖ <grey>No pending action to cancel, arr!
+prism.confirmation.header-border=══════════════════════════════════
+prism.confirmation.header-title=Action Confirmation
+prism.confirmation.action-label=Action
+prism.confirmation.scope-label=Scope
+prism.confirmation.warning=This action will modify world blocks, confirm to continue, savvy?
+prism.confirmation.button-confirm=[✔ Confirm]
+prism.confirmation.button-confirm-hover=Click to confirm this action
+prism.confirmation.button-cancel=[✖ Cancel]
+prism.confirmation.button-cancel-hover=Click to cancel this action
+prism.confirmation.timeout-info=This confirmation will expire in <timeout> seconds
+prism.help.unknown-topic=<prefix><#fc2150>Unknown help topic, matey: <yellow><topic><#fc2150>. Use <aqua>/prism help <#fc2150>to view the main help page, arr!
+prism.help.header=<white>───── <dark_aqua><bold><title> <white>─────
+prism.help.main.header=Prism Command Help
+prism.help.main.tip=<grey><italic>Tip: <dark_grey><italic>Click commands to auto-fill in chat, savvy?
+prism.help.hover.click-for-help=Click to view detailed help
+prism.help.hover.click-to-fill=Click to fill command
+prism.help.hover.click-to-execute=Click to execute, arr!
+prism.help.label.aliases=Aliases
+prism.help.label.example=Example
+prism.error.no-parameters=<prefix><#fc2150>✖ <grey>Avast! No parameters provided, ye scallywag! Use parameters with this command.
+prism.error.incomplete-parameters=<prefix><#fc2150>✖ <grey>Shiver me timbers! Incomplete parameters. Provide all required parameters, ye landlubber!
+prism.error.invalid-parameters=<prefix><#fc2150>✖ <grey>Blimey! Invalid or malformed parameters.
