--- a/prism-paper/src/main/resources/locale/messages-en_US.properties
+++ b/prism-paper/src/main/resources/locale/messages-en_US.properties
@@ -1,10 +1,10 @@
 prism.about=<prefix><white>Version <#4fffd3><version> <white>by <#00f2fa>v<#0af5d5>i<#15f9b0>v<#1ffc8b>e<#29ff66>l<#5cff77>e<#8eff87>r<#c1ff98>o<#f3ffa8>i
-prism.activity-row-grouped-no-descriptor-no-quantity=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <white><activity_since>
-prism.activity-row-grouped-no-descriptor=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>x<activity_count> <white><activity_since>
-prism.activity-row-grouped-no-quantity=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <white><activity_since>
-prism.activity-row-grouped=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>x<activity_count> <white><activity_since>
-prism.activity-row-ungrouped-no-descriptor=<activity_sign> <grey>#<activity_id> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>@<yellow><activity_location> <white><activity_since>
-prism.activity-row-ungrouped=<activity_sign> <grey>#<activity_id> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>@<yellow><activity_location> <white><activity_since>
+prism.activity-row-grouped-no-descriptor-no-quantity=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense>
+prism.activity-row-grouped-no-descriptor=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>(x<activity_count>)
+prism.activity-row-grouped-no-quantity=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor>
+prism.activity-row-grouped=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>(x<activity_count>)
+prism.activity-row-ungrouped-no-descriptor=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense>
+prism.activity-row-ungrouped=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor>
 prism.alert-block-break-night-vision=<data_color><data_player> found <data_count> <data_block> in <data_light_level>% light (using night vision)
 prism.alert-block-break=<data_color><data_player> found <data_count> <data_block> in <data_light_level>% light
 prism.alert-block-place=<data_color><data_player> placed <data_object>
@@ -166,3 +166,166 @@ prism.wand-mode-inspect=Inspect
 prism.wand-mode-restore=Restore
 prism.wand-mode-rollback=Rollback
 prism.wand-switched=<prefix><#9dfc56>Switched wand mode to: <wandmode>
+claims.not_your_claim=<prefix><#fc2150>You cannot use inspect in someone else's claim
+claims.wilderness_no_permission=<prefix><#fc2150>You don't have permission to inspect in wilderness
+prism.confirmation.timeout=<prefix><#fcff69>⚠ <grey>Confirmation timed out. Please run the command again.
+prism.confirmation.confirmed=<prefix><#9dfc56>✔ <grey>Action confirmed, executing...
+prism.confirmation.cancelled=<prefix><grey>✔ Action cancelled.
+prism.confirmation.no-pending=<prefix><#fc2150>✖ <grey>No pending confirmation.
+prism.confirmation.invalid-id=<prefix><#fc2150>✖ <grey>Invalid confirmation ID.
+prism.confirmation.no-cancel-pending=<prefix><#fc2150>✖ <grey>No pending action to cancel.
+prism.confirmation.header-border=══════════════════════════════════
+prism.confirmation.header-title=Action Confirmation
+prism.confirmation.action-label=Action
+prism.confirmation.scope-label=Scope
+prism.confirmation.warning=This action will modify world blocks, please confirm to continue.
+prism.confirmation.button-confirm=[✔ Confirm]
+prism.confirmation.button-confirm-hover=Click to confirm this action
+prism.confirmation.button-cancel=[✖ Cancel]
+prism.confirmation.button-cancel-hover=Click to cancel this action
+prism.confirmation.timeout-info=This confirmation will expire in <timeout> seconds
+prism.help.unknown-topic=<prefix><#fc2150>Unknown help topic: <yellow><topic><#fc2150>. Use <aqua>/prism help <#fc2150>to view the main help page.
+prism.help.header=<white>───── <dark_aqua><bold><title> <white>─────
+prism.help.main.header=Prism Command Help
+prism.help.main.tip=<grey><italic>Tip: <dark_grey><italic>Click commands to auto-fill in chat
+prism.help.command.help=/prism help <topic>
+prism.help.command.help.desc=Show help information
+prism.help.command.lookup=/prism lookup <params>
+prism.help.command.lookup.desc=Query activity records
+prism.help.command.rollback=/prism rollback <params>
+prism.help.command.rollback.desc=Rollback changes
+prism.help.command.restore=/prism restore <params>
+prism.help.command.restore.desc=Restore changes
+prism.help.command.near=/prism near [radius]
+prism.help.command.near.desc=View nearby activity
+prism.help.command.vault=/prism vault <params>
+prism.help.command.vault.desc=View item records
+prism.help.command.wand=/prism wand [mode]
+prism.help.command.wand.desc=Get inspection wand
+prism.help.command.preview=/prism preview
+prism.help.command.preview.desc=Preview modifications
+prism.help.command.drain=/prism drain <params>
+prism.help.command.drain.desc=Drain lava in area
+prism.help.command.extinguish=/prism extinguish <params>
+prism.help.command.extinguish.desc=Extinguish fire in area
+prism.help.command.purge=/prism purge <params>
+prism.help.command.purge.desc=Purge old records
+prism.help.command.teleport=/prism teleport <location>
+prism.help.command.teleport.desc=Teleport to coordinates
+prism.help.command.page=/prism page <number>
+prism.help.command.page.desc=Page through results
+prism.help.command.about=/prism about
+prism.help.command.about.desc=About Prism
+prism.help.lookup.header=Lookup Command Help
+prism.help.lookup.usage=Usage
+prism.help.lookup.usage.text=/prism lookup <params>
+prism.help.lookup.aliases=Aliases
+prism.help.lookup.aliases.text=/pr l, /prism l
+prism.help.lookup.description=Description
+prism.help.lookup.description.text=Query activity records on the server with multiple filter parameters.
+prism.help.rollback.header=Rollback Command Help
+prism.help.rollback.usage.text=/prism rollback <params>
+prism.help.rollback.aliases.text=/pr rb
+prism.help.rollback.description.text=Rollback (undo) changes caused by players or events.
+prism.help.rollback.note=Note: Only one rollback/restore can run at a time.
+prism.help.rollback.flags=Available Flags
+prism.help.rollback.flag.nodefaults=--nd, --nodefaults
+prism.help.rollback.flag.nodefaults.desc=Don't use defaults
+prism.help.rollback.flag.nogroup=--ng, --nogroup
+prism.help.rollback.flag.nogroup.desc=Don't group modifications
+prism.help.rollback.flag.overwrite=--ow, --overwrite
+prism.help.rollback.flag.overwrite.desc=Overwrite existing blocks
+prism.help.restore.header=Restore Command Help
+prism.help.restore.usage.text=/prism restore <params>
+prism.help.restore.aliases.text=/pr rs
+prism.help.restore.description.text=Restore (redo) changes caused by players or events.
+prism.help.restore.description.note=This is the opposite of rollback, re-applying changes.
+prism.help.restore.params.note=<grey>Available parameters are the same as <yellow>rollback<grey>,
+prism.help.params.header=Query Parameters Help
+prism.help.params.intro=The following parameters can be used for lookup, rollback, restore commands:
+prism.help.params.player.desc=Specify player(s) (comma-separated for multiple)
+prism.help.params.player.example=p:Notch,Jeb_
+prism.help.params.player.aliases=u:, user:, users:
+prism.help.params.since.desc=Specify start time
+prism.help.params.since.example=since:1h, since:30m, since:1d
+prism.help.params.since.aliases=t:, time:
+prism.help.params.before.desc=Specify end time
+prism.help.params.before.example=before:2h
+prism.help.params.radius.desc=Specify search radius (centered on you)
+prism.help.params.radius.example=r:10
+prism.help.params.radius.aliases=radius:
+prism.help.params.action.desc=Specify action type
+prism.help.params.action.example=a:block-break, a:block-place
+prism.help.params.action.aliases=action:
+prism.help.params.block.desc=Specify block type
+prism.help.params.block.example=b:diamond_ore, b:stone
+prism.help.params.block.aliases=block:, blocks:
+prism.help.params.btag.desc=Specify block tag
+prism.help.params.btag.example=btag:minecraft:logs
+prism.help.params.entity.desc=Specify entity type
+prism.help.params.entity.example=e:cow, e:zombie
+prism.help.params.entity.aliases=entity:
+prism.help.params.etag.desc=Specify entity tag
+prism.help.params.etag.example=etag:minecraft:raiders
+prism.help.params.item.desc=Specify item type
+prism.help.params.item.example=i:diamond_sword
+prism.help.params.item.aliases=item:, items:
+prism.help.params.itag.desc=Specify item tag
+prism.help.params.itag.example=itag:minecraft:tools
+prism.help.params.world.desc=Specify world
+prism.help.params.world.example=world:world_nether
+prism.help.params.world.aliases=w:
+prism.help.params.at.desc=Specify exact location
+prism.help.params.at.example=at:100,64,200
+prism.help.params.bounds.desc=Specify boundary range
+prism.help.params.bounds.example=bounds:0,0,0-100,100,100
+prism.help.params.in.desc=Specify range type
+prism.help.params.in.example=in:chunk, in:world, in:worldedit
+prism.help.params.time-format=Time Format
+prism.help.params.time-format.desc=s=seconds, m=minutes, h=hours, d=days, w=weeks
+prism.help.params.time-format.example=Example: 1h30m = 1 hour 30 minutes
+prism.help.params.coreprotect=<green><bold>✨ CoreProtect Compatibility:
+prism.help.params.coreprotect.desc1=Prism supports CoreProtect-style parameter aliases (u:, t:, action:, etc.)
+prism.help.params.coreprotect.desc2=This makes migration from CoreProtect easier!
+prism.help.purge.header=Purge Command Help
+prism.help.purge.usage.text=/prism purge since:<time>
+prism.help.purge.description.text=Permanently delete old activity records from database.
+prism.help.purge.warning=<red><bold>Warning: This action is irreversible!
+prism.help.purge.supported-params=Supported params: since:, t:, time:
+prism.help.near.header=Near Command Help
+prism.help.near.usage.text=/prism near
+prism.help.near.description.text=Quickly view nearby activity records (default radius 5 blocks).
+prism.help.vault.header=Vault Command Help
+prism.help.vault.usage.text=/prism vault <params>
+prism.help.vault.description.text=View item activity records in GUI (drops, pickups, etc.).
+prism.help.wand.header=Wand Command Help
+prism.help.wand.usage.text=/prism wand [mode]
+prism.help.wand.description.text=Give you an inspection wand to view block history.
+prism.help.wand.modes=Available Modes
+prism.help.wand.mode.inspect=inspect - Inspection mode (default)
+prism.help.wand.mode.rollback=rollback - Rollback mode
+prism.help.wand.mode.restore=restore - Restore mode
+prism.help.preview.header=Preview Command Help
+prism.help.preview.usage.text=/prism preview
+prism.help.preview.description.text=Preview or cancel the last rollback/restore operation.
+prism.help.preview.description.note=Preview temporarily shows changes without actually applying them.
+prism.help.drain.header=Drain Command Help
+prism.help.drain.usage.text=/prism drain <params>
+prism.help.drain.description.text=Drain all lava in the specified area.
+prism.help.drain.note=Requires radius parameter (r: or radius:)
+prism.help.extinguish.header=Extinguish Command Help
+prism.help.extinguish.usage.text=/prism extinguish <params>
+prism.help.extinguish.description.text=Extinguish all fire in the specified area.
+prism.help.extinguish.note=Requires radius parameter (r: or radius:)
+prism.help.teleport.header=Teleport Command Help
+prism.help.teleport.usage.text=/prism teleport <x> <y> <z> [world]
+prism.help.teleport.description.text=Teleport to specified coordinates.
+prism.help.see-params=<yellow>📖 View available parameters: <aqua><command>
+prism.help.hover.click-for-help=Click to view detailed help
+prism.help.hover.click-to-fill=Click to fill command
+prism.help.hover.click-to-execute=Click to execute
+prism.help.label.aliases=Aliases
+prism.help.label.example=Example
+prism.error.no-parameters=<prefix><#fc2150>✖ <grey>No parameters provided. Please use parameters with this command.
+prism.error.incomplete-parameters=<prefix><#fc2150>✖ <grey>Incomplete parameters. Please provide all required parameters.
+prism.error.invalid-parameters=<prefix><#fc2150>✖ <grey>Invalid or malformed parameters.
