--- a/prism-paper/src/main/resources/locale/messages-zh_CN.properties
+++ b/prism-paper/src/main/resources/locale/messages-zh_CN.properties
@@ -1,10 +1,10 @@
 prism.about=<prefix><white>版本 <#4fffd3><version> <white>作者 <#00f2fa>v<#0af5d5>i<#15f9b0>v<#1ffc8b>e<#29ff66>l<#5cff77>e<#8eff87>r<#c1ff98>o<#f3ffa8>i
-prism.activity-row-grouped-no-descriptor-no-quantity=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <white><activity_since>
-prism.activity-row-grouped-no-descriptor=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>x<activity_count> <white><activity_since>
-prism.activity-row-grouped-no-quantity=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <white><activity_since>
-prism.activity-row-grouped=<activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>x<activity_count> <white><activity_since>
-prism.activity-row-ungrouped-no-descriptor=<activity_sign> <grey>#<activity_id> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>@<yellow><activity_location> <white><activity_since>
-prism.activity-row-ungrouped=<activity_sign> <grey>#<activity_id> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>@<yellow><activity_location> <white><activity_since>
+prism.activity-row-grouped-no-descriptor-no-quantity=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense>
+prism.activity-row-grouped-no-descriptor=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#4fffd3>(x<activity_count>)
+prism.activity-row-grouped-no-quantity=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor>
+prism.activity-row-grouped=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor> <#4fffd3>(x<activity_count>)
+prism.activity-row-ungrouped-no-descriptor=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense>
+prism.activity-row-ungrouped=<white><activity_since> <activity_sign> <#03a5fc><activity_cause> <white><activity_action_past_tense> <#03a5fc><activity_descriptor>
 prism.alert-block-break-night-vision=<data_color><data_player> 使用夜视在 <data_light_level>% 亮度下发现了 <data_count> 个 <data_block>
 prism.alert-block-break=<data_color><data_player> 在 <data_light_level>% 亮度下发现了 <data_count> 个 <data_block>
 prism.alert-block-place=<data_color><data_player> 放置了 <data_block>
@@ -151,3 +151,166 @@ prism.wand-mode-inspect=检查
 prism.wand-mode-restore=恢复
 prism.wand-mode-rollback=回滚
 prism.wand-switched=<prefix><#9dfc56>已切换魔杖模式至: <wandmode>
+claims.not_your_claim=<prefix><#fc2150>你不能在别人的领地内使用检查功能
+claims.wilderness_no_permission=<prefix><#fc2150>你没有权限在野外使用检查功能
+prism.confirmation.timeout=<prefix><#fcff69>⚠ <grey>确认已超时。请重新执行命令。
+prism.confirmation.confirmed=<prefix><#9dfc56>✔ <grey>操作已确认，正在执行...
+prism.confirmation.cancelled=<prefix><grey>✔ 操作已取消。
+prism.confirmation.no-pending=<prefix><#fc2150>✖ <grey>没有待确认的操作。
+prism.confirmation.invalid-id=<prefix><#fc2150>✖ <grey>无效的确认ID。
+prism.confirmation.no-cancel-pending=<prefix><#fc2150>✖ <grey>没有待取消的操作。
+prism.confirmation.header-border=══════════════════════════════════
+prism.confirmation.header-title=操作确认
+prism.confirmation.action-label=操作
+prism.confirmation.scope-label=范围
+prism.confirmation.warning=此操作将修改世界方块，请确认是否继续。
+prism.confirmation.button-confirm=[✔ 确认执行]
+prism.confirmation.button-confirm-hover=点击确认执行此操作
+prism.confirmation.button-cancel=[✖ 取消]
+prism.confirmation.button-cancel-hover=点击取消此操作
+prism.confirmation.timeout-info=此确认将在 <timeout> 秒后过期
+prism.help.unknown-topic=<prefix><#fc2150>未知的帮助主题: <yellow><topic><#fc2150>. 使用 <aqua>/prism help <#fc2150>查看主帮助页面.
+prism.help.header=<white>───── <dark_aqua><bold><title> <white>─────
+prism.help.main.header=Prism 命令帮助
+prism.help.main.tip=<grey><italic>提示: <dark_grey><italic>点击命令可自动填入聊天框
+prism.help.command.help=/prism help <主题>
+prism.help.command.help.desc=显示帮助信息
+prism.help.command.lookup=/prism lookup <参数>
+prism.help.command.lookup.desc=查询活动记录
+prism.help.command.rollback=/prism rollback <参数>
+prism.help.command.rollback.desc=回滚更改
+prism.help.command.restore=/prism restore <参数>
+prism.help.command.restore.desc=恢复更改
+prism.help.command.near=/prism near [半径]
+prism.help.command.near.desc=查看附近活动
+prism.help.command.vault=/prism vault <参数>
+prism.help.command.vault.desc=查看物品记录
+prism.help.command.wand=/prism wand [模式]
+prism.help.command.wand.desc=获取检查魔杖
+prism.help.command.preview=/prism preview
+prism.help.command.preview.desc=预览修改
+prism.help.command.drain=/prism drain <参数>
+prism.help.command.drain.desc=排除区域内的熔岩
+prism.help.command.extinguish=/prism extinguish <参数>
+prism.help.command.extinguish.desc=扑灭区域内的火焰
+prism.help.command.purge=/prism purge <参数>
+prism.help.command.purge.desc=清理旧记录
+prism.help.command.teleport=/prism teleport <位置>
+prism.help.command.teleport.desc=传送到坐标
+prism.help.command.page=/prism page <页码>
+prism.help.command.page.desc=翻页查看结果
+prism.help.command.about=/prism about
+prism.help.command.about.desc=关于 Prism
+prism.help.lookup.header=Lookup 命令帮助
+prism.help.lookup.usage=用法
+prism.help.lookup.usage.text=/prism lookup <参数>
+prism.help.lookup.aliases=别名
+prism.help.lookup.aliases.text=/pr l, /prism l
+prism.help.lookup.description=描述
+prism.help.lookup.description.text=查询服务器上的活动记录，支持多种过滤参数。
+prism.help.rollback.header=Rollback 命令帮助
+prism.help.rollback.usage.text=/prism rollback <参数>
+prism.help.rollback.aliases.text=/pr rb
+prism.help.rollback.description.text=回滚（撤销）玩家或事件造成的更改。
+prism.help.rollback.note=注意: 一次只能运行一个回滚/恢复操作。
+prism.help.rollback.flags=可用标志
+prism.help.rollback.flag.nodefaults=--nd, --nodefaults
+prism.help.rollback.flag.nodefaults.desc=不使用默认值
+prism.help.rollback.flag.nogroup=--ng, --nogroup
+prism.help.rollback.flag.nogroup.desc=不分组修改
+prism.help.rollback.flag.overwrite=--ow, --overwrite
+prism.help.rollback.flag.overwrite.desc=覆盖现有方块
+prism.help.restore.header=Restore 命令帮助
+prism.help.restore.usage.text=/prism restore <参数>
+prism.help.restore.aliases.text=/pr rs
+prism.help.restore.description.text=恢复（重做）玩家或事件造成的更改。
+prism.help.restore.description.note=这与回滚相反，会重新应用更改。
+prism.help.restore.params.note=<grey>可用参数与 <yellow>rollback <grey>相同，
+prism.help.params.header=查询参数帮助
+prism.help.params.intro=以下参数可用于 lookup, rollback, restore 等命令:
+prism.help.params.player.desc=指定玩家（可以用逗号分隔多个）
+prism.help.params.player.example=p:Notch,Jeb_
+prism.help.params.player.aliases=u:, user:, users:
+prism.help.params.since.desc=指定起始时间
+prism.help.params.since.example=since:1h, since:30m, since:1d
+prism.help.params.since.aliases=t:, time:
+prism.help.params.before.desc=指定结束时间
+prism.help.params.before.example=before:2h
+prism.help.params.radius.desc=指定搜索半径（以你为中心）
+prism.help.params.radius.example=r:10
+prism.help.params.radius.aliases=radius:
+prism.help.params.action.desc=指定动作类型
+prism.help.params.action.example=a:block-break, a:block-place
+prism.help.params.action.aliases=action:
+prism.help.params.block.desc=指定方块类型
+prism.help.params.block.example=b:diamond_ore, b:stone
+prism.help.params.block.aliases=block:, blocks:
+prism.help.params.btag.desc=指定方块标签
+prism.help.params.btag.example=btag:minecraft:logs
+prism.help.params.entity.desc=指定实体类型
+prism.help.params.entity.example=e:cow, e:zombie
+prism.help.params.entity.aliases=entity:
+prism.help.params.etag.desc=指定实体标签
+prism.help.params.etag.example=etag:minecraft:raiders
+prism.help.params.item.desc=指定物品类型
+prism.help.params.item.example=i:diamond_sword
+prism.help.params.item.aliases=item:, items:
+prism.help.params.itag.desc=指定物品标签
+prism.help.params.itag.example=itag:minecraft:tools
+prism.help.params.world.desc=指定世界
+prism.help.params.world.example=world:world_nether
+prism.help.params.world.aliases=w:
+prism.help.params.at.desc=指定精确位置
+prism.help.params.at.example=at:100,64,200
+prism.help.params.bounds.desc=指定边界范围
+prism.help.params.bounds.example=bounds:0,0,0-100,100,100
+prism.help.params.in.desc=指定范围类型
+prism.help.params.in.example=in:chunk, in:world, in:worldedit
+prism.help.params.time-format=时间格式说明
+prism.help.params.time-format.desc=s=秒, m=分钟, h=小时, d=天, w=周
+prism.help.params.time-format.example=示例: 1h30m = 1小时30分钟
+prism.help.params.coreprotect=<green><bold>✨ CoreProtect兼容性:
+prism.help.params.coreprotect.desc1=Prism支持CoreProtect风格的参数别名（如 u:, t:, action: 等）
+prism.help.params.coreprotect.desc2=这使得从CoreProtect迁移更加容易！
+prism.help.purge.header=Purge 命令帮助
+prism.help.purge.usage.text=/prism purge since:<时间>
+prism.help.purge.description.text=从数据库中永久删除旧的活动记录。
+prism.help.purge.warning=<red><bold>警告: 此操作不可逆！
+prism.help.purge.supported-params=支持参数: since:, t:, time:
+prism.help.near.header=Near 命令帮助
+prism.help.near.usage.text=/prism near
+prism.help.near.description.text=快速查看你附近的活动记录（默认半径5格）。
+prism.help.vault.header=Vault 命令帮助
+prism.help.vault.usage.text=/prism vault <参数>
+prism.help.vault.description.text=在GUI中查看物品活动记录（丢弃、拾取等）。
+prism.help.wand.header=Wand 命令帮助
+prism.help.wand.usage.text=/prism wand [模式]
+prism.help.wand.description.text=给你一个检查魔杖，可以查看方块历史记录。
+prism.help.wand.modes=可用模式
+prism.help.wand.mode.inspect=inspect - 检查模式（默认）
+prism.help.wand.mode.rollback=rollback - 回滚模式
+prism.help.wand.mode.restore=restore - 恢复模式
+prism.help.preview.header=Preview 命令帮助
+prism.help.preview.usage.text=/prism preview
+prism.help.preview.description.text=预览或取消上一次的回滚/恢复操作。
+prism.help.preview.description.note=预览会临时显示更改，但不会实际应用。
+prism.help.drain.header=Drain 命令帮助
+prism.help.drain.usage.text=/prism drain <参数>
+prism.help.drain.description.text=排除指定区域内的所有熔岩。
+prism.help.drain.note=需要指定半径参数 (r:或radius:)
+prism.help.extinguish.header=Extinguish 命令帮助
+prism.help.extinguish.usage.text=/prism extinguish <参数>
+prism.help.extinguish.description.text=扑灭指定区域内的所有火焰。
+prism.help.extinguish.note=需要指定半径参数 (r:或radius:)
+prism.help.teleport.header=Teleport 命令帮助
+prism.help.teleport.usage.text=/prism teleport <x> <y> <z> [世界]
+prism.help.teleport.description.text=传送到指定坐标。
+prism.help.see-params=<yellow>📖 查看可用参数: <aqua><command>
+prism.help.hover.click-for-help=点击查看详细帮助
+prism.help.hover.click-to-fill=点击填入命令
+prism.help.hover.click-to-execute=点击执行
+prism.help.label.aliases=别名
+prism.help.label.example=示例
+prism.error.no-parameters=<prefix><#fc2150>✖ <grey>未提供任何参数。请使用参数执行命令。
+prism.error.incomplete-parameters=<prefix><#fc2150>✖ <grey>参数不完整。请提供所有必需的参数。
+prism.error.invalid-parameters=<prefix><#fc2150>✖ <grey>参数无效或格式错误。
